entrega 3 e parte da entrega 4